--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,26 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.wall {
+  background-image: url("/aula.jpg");
+  padding-bottom:50px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.study-back {
+  background-image: url("/hills.jpg");
+  padding-bottom:50px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.cyber {
+  background-image: url("/cyber.png");
+  padding-bottom:50px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
